# sca

./: .coverage.Mathiass-MacBook-Pro.local.71271.XCyururx  .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  PLAN.md  README.md  pyproject.toml  spodeli.py  tox.ini
.cursor/rules/: incremental-change.mdc  pythonic.mdc
.github/workflows/: hatch-publish-to-pypi.yml  link_to_project.yml  tox.yml
src/: calculate_collocates.py  sca.py  seeding_db.py  trend.py
src/sca/: corpus.py
tests/: dynamic_headers_test.csv  make_100_csv_test.py  make_100_pseudo_test.py  make_100_test.py  make_100_tsv_test.py  pseudomized_data.tsv  test_corpus.py  test_dynamic_headers.py  test_integration.py  test_stopword_manager.py  test_uniqueness.py  uk_hansard_100rows.tsv
