[project]
dependencies =[
  "tqdm",
  "pandas",
  "nltk",
  "ipywidgets",
  "PyYAML==6.0.2",
  "sqlite-utils"
]
name ="sca"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
  {name = "Mathias Johansson", email = "MathiasJoha@gmail.com"},
  {name = "Betto van Waarden"}
]
maintainers = [
  {name="Mathias Johansson", email="MathiasJoha@gmail.com"}
]
readme = "README.md"
description="An implementation of Structural Collocation Analysis (https://doi.org/10.1080/01615440.2024.2414259)"
license = {"file"= "LICENSE"}

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
force-exclude = '''
/(
    \.toml
  | \.yaml
)/
'''



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = "src/sca/"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "coverage-badge"
]
